# compilingShortSemester

./: -  .gitignore  CMakeLists.txt  DEDUP_STRATEGY.md  DIALECT_RV_BACKEND.md  EVAL_BUGLOG.md  Makefile  OPTIMIZATION_ROADMAP.md  OPT_ACTION.md  OPT_SCORE_ROADMAP.md  OPT_STRATEGY_LOOP.md  PLATFORM_SUBMIT.md  PORT_PATH_A.md  README.md  ast.h  codegen.cpp  codegen.h  ir.h  ir_build.cpp  ir_opt.cpp  main.cpp  run_tests.py  semantic.cpp  token.h
.docker-compiler-build/: Makefile  codegen.cpp  ir.h  ir_build.cpp  lexer.h  main.cpp  semantic.cpp  semantic.h
docs/: RISC-V32后端约定.md  完整实现方案.md  性能提分方案-第二阶段.md  竞赛资料与性能优化分析.md  项目初始化与分工计划.md
examples/: smoke.sy  toyc_smoke.tc
local_eval_cases/: _gen_divmod.out  _gen_divmod.sy  deep_if_while.sy  dot_product_ijk.sy  guarded_accum.sy  mini_lcg.out  mini_lcg.sy  mini_matmul.sy  mini_transpose.sy  transpose_then_kj.sy
performance/: 01_mm1.s  01_mm3.s  03_sort1.s  03_sort3.s  conv2d-1.s  crc2.s  crc3.s  crypto-1.s  fft0.s  fft2.s  h-1-01.s  h-1-02.s  h-10-02.s  h-10-03.s  h-4-02.s  h-4-03.s  h-5-02.s  h-5-03.s  h-8-01.s  h-8-03.s  h-9-02.s  huffman-01.s  huffman-03.s  knapsack_naive-1.s  knapsack_naive-3.s  many_mat_cal-1.s  many_mat_cal-3.s  matmul1.s  matmul2.s  matmul3.s  optimization_scheduling3.s  shuffle0.s  shuffle2.s  sl2.s  sl3.s  transpose0.s  transpose1.s
runtime/: sylib.h  sysy_runtime.c
scripts/: asm-ab-perf.sh  bisect-kernel-passes.sh  bisect-pass-kernel.sh  bisect_sysy_o1_env.sh  cmp_o0_o1.sh  cmp_o1_tiers.sh  compare-rv-ir-subset.sh  compile_all_sy.sh  compile_memlimit.sh  diff-rv-ir-func.sh  docker-test-container.sh  docker_local_eval.sh  docker_local_eval_in_container.sh  e2e-docker.sh  eval-compare-opt.sh  eval-gate.sh  eval-hotspots.sh  eval-runtime.sh  eval-vs-baseline.sh  eval_perf.sh  opt-passes-on-experimental.sh  opt-passes-on.sh  pass-bisect-qemu.sh  pass-compare.sh  perf_summary.sh  profile_sy.sh  run-smoke-docker.sh  run-smoke-sisyphus.sh  run_local_eval.sh  run_sy_tests.sh  runtime-summary.sh  runtime_common.sh  size_report_sy.sh  split_modules.py  sysy_runtime.c  test-fallback-paths.sh
src/: ast.hpp  codegen.cpp  codegen.h  codegen.hpp  common.cpp  common.h  common.hpp  ctfe.cpp  ctfe.hpp  dialect_fallback.cpp  dialect_fallback.h  dialect_pipeline.cpp  dialect_pipeline.h  ir.h  ir_build.cpp  ir_cleanup.cpp  ir_cleanup.h  ir_dom.cpp  ir_dom.h  ir_expr_gvn.cpp  ir_expr_gvn.h  ir_loop_opt.cpp  ir_loop_opt.h  ir_mem2reg.cpp  ir_mem2reg.h  ir_opt.cpp  ir_reassociate.cpp  ir_reassociate.h  ir_regalloc.cpp  ir_regalloc.h  ir_schedule.cpp  ir_schedule.h  knapsack_dp.cpp  knapsack_dp.h  land_lor_split.cpp  land_lor_split.h  lexer.cpp  lexer.hpp  lexer_io.cpp  lexer_scan.cpp  (+23 more)
tests/: README.md  run_ctfe_differential.py  run_regressions.py
tools/: gen_divmod_property_sy.py  split_compiler.py
参赛代码/: .gitignore  (+3 more)
(+262 files in other folders)
